--- a/index.html
+++ b/index.html
@@ -5,10 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Skylar</title>
+    <style>
+        body{
+            background-color: black;
+            color: white;
+        }
+        #refChat{
+            display: inline-block;
+            background-color: red;
+            color: white;
+            padding: 20px 40px;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 20px;
+            
+        }
+    </style>
 </head>
 <body>
-    <div>Hello</div>
-    <p>welcome</p>
-    <p>SB</p>
+    <h1>Welcome To SkylarLi HomePage</h1>
+    <p>Let"s go</p>
+    <a id="refChat" href="http://104.129.182.113:3000/">Chat Now</a>
 </body>
 </html>
